<resources>
    <string name="app_name">RestoPass</string>
    <string name="google_sign_in">INGRESA CON GOOGLE</string>
    <string name="restopass_sign_in">Ingresa con tu email</string>
    <string name="sign_up_button">Crear cuenta</string>
    <string name="welcome">Bienvenido a tu app de Restaurantes</string>
    <string name="signIn">Iniciar Sesión</string>
    <string name="emailLabel">Email</string>
    <string name="passwordLabel">Contraseña</string>
    <string name="userNameHint">minombre@ejemplo.com</string>
    <string name="passwordHint">Ejemplo123</string>
    <string name="passwordHelp">Máximo 8 caracteres</string>
    <string name="forgot_password">Olvidé mi contraseña</string>
    <string name="signUp">Crear Cuenta</string>
    <string name="firstNameLabel">Nombre</string>
    <string name="lastNameLabel">Apellido</string>
    <string name="firstNameHint">Nombre</string>
    <string name="lastNameHint">Apellido</string>
    <string name="next">Siguiente</string>
    <string name="currentPassword">Contraseña actual</string>
    <string name="newPassword">Nueva contraseña</string>
    <string name="repeatNewPassword">Repetir nueva contraseña</string>
    <string name="savePersonalInfo">Guardar</string>
    <string name="savePersonalInfoSuccess">¡Tus datos fueron guardados correctamente!</string>
    <string name="deleteAccountTitle">¡Cuidado!</string>
    <string name="deleteAccount"><![CDATA[Estás por eliminar tu cuenta de forma permanente.
    Esto incluye:<br>· Borrado de todos tus datos de nuestra base.<br>
   · Si estas enrolado, se eliminarán los datos de tu tarjeta de crédito y tus visitas restantes.<br>· Se eliminarán tus reservas y
     se te sacará de las invitaciones confirmadas y pendientes.<br>· Se eliminarán todas las puntuaciones que realizaste.<br>¿Deseas continuar? Esta acción no se puede deshacer]]></string>
    <string name="recoverPasswordCodeLabel">Código</string>
    <string name="recoverPasswordButton">Restablecer</string>
    <string name="passwordsNotEqual">Las contraseñas no coinciden</string>
    <string name="recoverPasswordTitleSuccess">¡Enhorabuena!</string>
    <string name="recoverPasswordDescriptionSuccess">Tu contraseña fue restablecida correctamente</string>
    <string name="principalEmailLabel">Email principal</string>
    <string name="currentPasswordLabel">Contraseña actual</string>
    <string name="newPasswordLabel">Contraseña nueva</string>
    <string name="secondaryEmailsLabel">Emails secundarios</string>
    <string name="addEmail">Agregar</string>
    <string name="send">Enviar</string>
    <string name="forgot_password_title">¿Olvidaste tu contraseña?</string>
    <string name="forgot_password_subtitle">Ingresa tu email y te enviaremos un correo para acceder a RestoPass</string>
    <string name="tokenRecoverPasswordTitle">Te enviamos un código a <![CDATA[<b>%1$s</b>]]> para cambiar tu contraseña. Ingresalo debajo para continuar con el proceso.</string>
    <string name="verifyCodeButton">Verificar</string>
    <string name="membershipsTitle">Nuestras Membresías</string>
    <string name="closeRestaurantsTitle">¡Cerca tuyo!</string>
    <string name="favoriteRestaurantsTitle">Tus favoritos</string>
    <string name="aboutRestoPassText">¿Cómo funciona RestoPass?</string>
    <string name="topTenDishesTitle">¡Los mejores platos de la semana!</string>
    <string name="helloUser">Hola, %1$s</string>
    <string name="title_home">Home</string>
    <string name="title_map">Mapa</string>
    <string name="title_reservations">Reservas</string>
    <string name="title_settings">Ajustes</string>
    <string name="reservation_action_cancel">Cancelar Reserva</string>
    <string name="reservation_action_rating_experience">Puntuar Experiencia</string>
    <string name="reservation_action_cancel_invitation">Cancelar asistencia</string>
    <string name="pending_reservation_accept">Confirmar</string>
    <string name="pending_reservation_cancel">Rechazar</string>
    <string name="membershipRequiredEnrolledAlertTitle">Mejorá tu membresía</string>
    <string name="membershipRequiredNotEnrolledAlertTitle">Sumate a nuestro programa</string>
    <string name="membershipRequiredTopMembershipAlertDescription">Para poder acceder a esta reserva, es necesario tener la membresía <![CDATA[<b>%1$s</b>]]>.</string>
    <string name="membershipRequiredAlertDescription">Para poder acceder a esta reserva, es necesario tener la membresía <![CDATA[<b>%1$s</b>]]> o una superior a ella.</string>
    <string name="showMembershipAlertButton">Ver membresía</string>
    <string name="cancelAlertButton">Cancelar</string>
    <string name="reservationConfirmed">La reserva fue confirmada correctamente!</string>
    <string name="reservation_status_canceled">Reserva cancelada</string>
    <string name="reservation_status_done">Reserva concretada</string>
    <string name="reservation_status_confirmed">Confirmada</string>
    <string name="reservation_status_pending">Pendiente</string>
    <string name="reservation_show_qr">Ver QR</string>
    <string name="reservation_qr_title">Tu QR. Muestraselo al mozo</string>
    <string name="reservation_cancel_alert">"¿Estas seguro que queres cancelar tu reserva?"</string>
    <string name="reservation_diners_confirmed">"Invitados confirmados"</string>
    <string name="reservation_diners_toConfirm">"Invitados por confirmar"</string>
    <string name="reservation_invitation">"Invitación de <b>%1$s"</b></string>
    <string name="history_reservations_title">Historial de Reservas</string>
    <string name="qr_detail">Reserva %1$s</string>
    <string name="qr_detail_title">Este es tu código QR</string>
    <string name="qr_detail_subtitle">Mostráselo al mozo al llegar</string>
    <string name="qr_detail_error_title">¿No funciona? Prueba con los siguientes datos</string>
    <string name="qr_detail_error_reservation">Nro de reserva: <![CDATA[<b>%1$s</b>]]> </string>
    <string name="qr_detail_error_user">Usuario: <![CDATA[<b>%1$s</b>]]> </string>
    <string name="emptyReservationsTtitle">Aún no hay reservas</string>
    <string name="emptyReservationsDescription">Encontrá un restaurante, reservá una mesa y disfrutá de grandes platos!</string>
    <string name="emptyReservationsButton">Ver restaurantes</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="resto_card_text">Mirutaki</string>
    <string name="create_reservation_title">Reserva para</string>
    <string name="pick_time_title">Seleccione un horario</string>
    <string name="pick_day_title">Seleccione una fecha</string>
    <string name="pick_guests_title">Seleccione número de comensales</string>
    <string name="hours">%1$shs</string>
    <string name="confirm_reservation_disclaimer">Acordate que una vez confirmada la reserva se te descuenta una visita. Puedes cancelar hasta las %1$s del %2$s</string>
    <string name="already_add_invite">Usuario ya añadido</string>
    <string name="table_full">El número de invitados no puede exceder al número de personas en la mesa</string>
    <string name="no_more_visits">No te quedan más visitas disponibles. Cancelá alguna reserva o mejora tu membresía para seguir disfrutando tus restaurantes favoritos</string>
    <string name="guests_list">Mesa para %1$s personas </string>
    <string name="confirm_reservation_title">¡Genial %1$s! \n Tu reserva esta confirmada</string>
    <string name="sucess_reservation_info">Te enviamos un mail de confirmación con el QR a presentar el día de tu visita. Podes ver toda la información de tu reserva en Mis Reservas</string>
    <string name="share_body_reservation">¡Vamos a comer! Mesa para %1$s el %2$s a las %3$s en %4$s. Dirección: %5$s</string>
    <string name="account">Cuenta</string>
    <string name="plan">Membresías</string>
    <string name="personal_info">Información personal</string>
    <string name="communications_settings">Medios de comunicación</string>
    <string name="payment_methods">Métodos de pago</string>
    <string name="booking_history">Historial de reservas</string>
    <string name="about">Sobre RestoPass</string>
    <string name="notifications">Notificaciones</string>
    <string name="logout">Cerrar sesión</string>
    <string name="restaurantes">Restaurantes</string>
    <string name="buscar_aqu">Buscar en este área</string>
    <string name="myVisitsMemoTitle">No te olvides!</string>
    <string name="myVisitsMemo">Las reservas activas descuentan visitas, podés cancelar alguna reserva para recuperar una visita.</string>
    <string name="myVisitsTitle">Mis visitas</string>
    <string name="myVisitsHave">Tenés</string>
    <string name="myVisitsAvailable">Visitas Disponibles</string>
    <string name="myVisitsExpiration">Tus visitas actuales vencen el <![CDATA[<b>%1$s</b>]]>.</string>
    <string name="myVisitsMembership">Tu membresía <![CDATA[<b>%1$s</b>]]> te permite acceder a hasta <![CDATA[<b>%2$s</b>]]> visitas durante 30 días.</string>
    <string name="myVisitsCanceledMembership">Recordá que cancelaste la membresía <![CDATA[<b>%1$s</b>]]>. Aún así, podés reservar en cualquier restaurant <![CDATA[<b>%1$s</b>]]> hasta el <![CDATA[<b>%2$s</b>]]>!</string>
    <string name="myVisitsMembershipButton">Conocé más de tu membresía</string>
    <string name="membershipToolbarTitle">Membresías</string>
    <string name="show_restaurants">Detalles</string>
    <string name="select_membership">Elegir membresía</string>
    <string name="membership_image_description">image</string>
    <string name="restaurants_count_label">Restos</string>
    <string name="dishes_count_label">Platos</string>
    <string name="visits_count_label">Visitas</string>
    <string name="price_tag">$ %1$s / mes</string>
    <string name="actual_membership">Cancelar Membresía</string>
    <string name="price_alert">"Tu empleador %1$s cubre el %2$s%% de la membresía"</string>
    <string name="price_free">"Gratis!"</string>
    <string name="cancel_membership">¿Estás seguro que querés cancelar tu membresía %1$s?</string>
    <string name="cancel_membership_body">Podrás seguir utilizando el servicio hasta el <![CDATA[<b>%1$s</b>]]> o hasta que se agoten tus visitas disponibles</string>
    <string name="positive_cancel_membership">Si, estoy seguro</string>
    <string name="chargeCreditCardTitle">¿Obtener membresía %1$s?</string>
    <string name="chargeCreditCardDescription">Efectuaremos el cobro en tu tarjeta <![CDATA[<b>%1$s</b> terminada en <b>%2$s</b>]]></string>
    <string name="aceptChargeCreditCard">Aceptar</string>
    <string name="restaurantImage">restaurantImage</string>
    <string name="available_dishes_plural">%1$s platos disponibles</string>
    <string name="available_dishes_singular">%1$s plato disponible</string>
    <string name="restaurantsListToolbarTitle">Restaurantes %1$s</string>
    <string name="accept">Aceptar</string>
    <string name="errorAlertTitle">Ups! Tuvimos un problema</string>
    <string name="errorAlertMessage">Inténtalo de nuevo más tarde</string>
    <string name="deleteAlertTitle">¿Estás seguro?</string>
    <string name="deleteAlertMessage">Eliminar</string>
    <string name="cancelAlertMessage">Cancelar</string>
    <string name="acceptAlertMessage">De acuerdo</string>
    <string name="reload">Reintentar</string>
    <string name="errorTitle">Ups! Tuvimos un problema. Por favor, recarga la sección</string>
    <string name="chooseMembership">Elegir membresía %1$s</string>
    <string name="showMemberships">Ver membresías</string>
    <string name="bookTable">Reservar mesa</string>
    <string name="dishImage">dishImage</string>
    <string name="availableDish">Disponible</string>
    <string name="emptyPaymentTtitle">Agregá una tarjeta</string>
    <string name="emptyPaymentDescription">Guardá de manera segura los datos de tu tarjeta y elegí una membresía para disfrutar</string>
    <string name="emptyPaymentButton">Agregar tarjeta</string>
</resources>