<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_not_enrolled_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home"
        android:visible="false"/>

    <item
        android:id="@+id/navigation_enrolled_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home"
        android:visible="false"/>

    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/ic_location"
        android:title="@string/title_map" />

    <item
        android:id="@+id/navigation_reservations"
        android:icon="@drawable/ic_fork"
        android:title="@string/title_reservations" />
    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/title_settings" />

</menu>
