<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/membershipContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundGray"
    android:orientation="vertical">

    <TextView
        android:id="@+id/qrDetailTitle"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginTop="25dp"
        android:textSize="25sp"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:text="@string/qr_detail_title"
        android:visibility="visible"/>

    <TextView
        android:id="@+id/qrDetailSubtitle"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="16sp"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:text="@string/qr_detail_subtitle"
        android:layout_below="@id/qrDetailTitle"
        android:visibility="visible"/>

    <ImageView
        android:id="@+id/qrImage"
        android:layout_height="300dp"
        android:layout_width="300dp"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/qrDetailSubtitle"/>

    <TextView
        android:id="@+id/qrErrorTitle"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="16sp"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:text="@string/qr_detail_error_title"
        android:layout_below="@id/qrImage"
        android:visibility="visible"/>

    <TextView
        android:id="@+id/qrReservationId"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="16sp"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_below="@id/qrErrorTitle"
        android:visibility="visible"/>

    <TextView
        android:id="@+id/qrUserId"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="16sp"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_below="@id/qrReservationId"
        android:visibility="visible"/>


</RelativeLayout>